@startuml
title EasyCar Rent – Class Diagram (IDs only)

class customer {
  + id
}

class driving_license {
  + id
  + customer_id
}

class customer_history {
  + id
  + customer_id
}

class vehicle {
  + id
  + vehicle_category_id
  + vehicle_status_id
}

class vehicle_category {
  + id
}

class vehicle_status {
  + id
}

class reservation {
  + id
  + customer_id
  + vehicle_id
  + reservation_status_id
  + branch_id
  + reservation_type_id
}

class reservation_status {
  + id
}

class branch {
  + id
}

class reservation_type {
  + id
}

' --- RELATIONSHIPS ---
customer "1" o-- "1" driving_license
customer "1" o-- "many" customer_history
reservation "1" o-- "1" customer
reservation "1" o-- "1" vehicle
vehicle "1" o-- "1" vehicle_category
vehicle "1" o-- "1" vehicle_status
reservation "1" o-- "1" reservation_status
reservation "1" o-- "1" branch
reservation "1" o-- "1" reservation_type
@enduml
